<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailTacheActivity">

    <TextView
        android:id="@+id/tacheId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center_vertical"
        android:text="@string/titre"
        android:textAlignment="center"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/dureeId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center_vertical"
        android:text="@string/duree"
        android:textAlignment="center"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/imgId"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="0.4"
        android:contentDescription="@string/image"
        app:srcCompat="@drawable/point_interro_" />

    <TextView
        android:id="@+id/descriptionId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="30dp"
        android:layout_weight="0.5"
        android:text="@string/desc"
        android:textAlignment="center" />
</LinearLayout>